--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "mongoose": "^6.2.6"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.21"
   }
 }
