--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "21.-projet-falvoenterprise---backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name"              : "falvoenterprise-backend",
+  "version"           : "1.0.0",
+  "description"       : "",
+  "main"              : "index.js",
+  "scripts"           : {
+    "test"            : "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "helmet": "^5.0.2",
-    "mongoose": "^6.2.6"
+  "author"            : "",
+  "license"           : "ISC",
+  "dependencies"      : {
+    "dotenv"          : "^16.0.0",
+    "express"         : "^4.17.3",
+    "helmet"          : "^5.0.2",
+    "mongoose"        : "^6.2.6"
   },
-  "devDependencies": {
-    "@types/node": "^17.0.21"
+  "devDependencies"   : {
+    "@types/node"     : "^17.0.21"
   }
 }
