--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name"              : "falvoenterprise-backend",
   "version"           : "1.0.0",
   "description"       : "",
-  "main"              : "index.js",
+  "main"              : "index.ts",
   "scripts"           : {
-    "test"            : "echo \"Error: no test specified\" && exit 1"
+    "test"            : "echo \"Error: no test specified\" && exit 1",
+    "start"           : "nodemon server.ts"
   },
+
   "author"            : "",
   "license"           : "ISC",
   "dependencies"      : {
     "dotenv"          : "^16.0.0",
     "express"         : "^4.17.3",
     "helmet"          : "^5.0.2",
-    "mongoose"        : "^6.2.6"
+    "mongoose"        : "^6.2.6",
+    "nodemon"         : "^2.0.15"
   },
+
   "devDependencies"   : {
     "@types/node"     : "^17.0.21"
   }
