--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name"              : "falvoenterprise-backend",
   "version"           : "1.0.0",
-  "description"       : "",
-  "main"              : "index.ts",
+  "description"       : "Back-end de FALVO ENTERPRISE",
+  "main"              : "server.ts",
   "scripts"           : {
     "test"            : "echo \"Error: no test specified\" && exit 1",
     "start"           : "nodemon server.ts"
   },
 
-  "author"            : "",
+  "author"            : "FALVO Anthony",
   "license"           : "ISC",
+
   "dependencies"      : {
     "dotenv"          : "^16.0.0",
     "express"         : "^4.17.3",
     "helmet"          : "^5.0.2",
     "mongoose"        : "^6.2.6",
-    "nodemon"         : "^2.0.15"
+    "nodemon"         : "^2.0.15",
+    "cors"            : "^2.8.5"
   },
 
   "devDependencies"   : {
