--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "helmet"          : "^5.0.2",
     "mongoose"        : "^6.2.6",
     "nodemon"         : "^2.0.15",
-    "cors"            : "^2.8.5"
+    "cors"            : "^2.8.5",
+    "typescript"      : "^4.6.2",
+    "tslint"          : "^6.1.3"
   },
 
   "devDependencies"   : {
