--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name"              : "falvoenterprise-backend",
-  "version"           : "1.0.0",
-  "description"       : "Back-end de FALVO ENTERPRISE",
-  "main"              : "server.ts",
-  "scripts"           : {
-    "test"            : "echo \"Error: no test specified\" && exit 1",
-    "start"           : "nodemon server.ts"
+  "name"                         : "falvoenterprise-backend",
+  "version"                      : "1.0.0",
+  "description"                  : "Back-end de FALVO ENTERPRISE",
+  "main"                         : "server.ts",
+  "scripts"                      : {
+    "start"                      : "nodemon server.ts"
   },
 
-  "author"            : "FALVO Anthony",
-  "license"           : "ISC",
+  "author"                       : "FALVO Anthony",
+  "license"                      : "ISC",
 
-  "dependencies"      : {
-    "dotenv"          : "^16.0.0",
-    "express"         : "^4.17.3",
-    "helmet"          : "^5.0.2",
-    "mongoose"        : "^6.2.6",
-    "nodemon"         : "^2.0.15",
-    "cors"            : "^2.8.5",
-    "typescript"      : "^4.6.2",
-    "tslint"          : "^6.1.3"
+  "dependencies"                 : {
+    "dotenv"                     : "^16.0.0",
+    "express"                    : "^4.17.3",
+    "helmet"                     : "^5.0.2",
+    "mongoose"                   : "^6.2.6",
+    "nodemon"                    : "^2.0.15",
+    "cors"                       : "^2.8.5",
+    "typescript"                 : "^4.6.2",
+    "tslint"                     : "^6.1.3",
+    "mongoose-unique-validator"  : "^3.0.0",
+    "multer"                     : "^1.4.4",
+    "password-validator"         : "^5.2.1",
+    "jsonwebtoken"               : "^8.5.1",
+    "bcrypt"                     : "^5.0.1",
+    "crypto-js"                  : "^4.1.1",
+    "cookie-parser"              : "^1.4.6"
   },
 
-  "devDependencies"   : {
-    "@types/node"     : "^17.0.21"
+  "devDependencies"              : {
+    "@types/node"                : "^17.0.21"
   }
 }
