--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
 
   "devDependencies"              : {
-    "@types/node"                : "^17.0.21"
+    "@types/node"                : "^17.0.21",
+    "@types/cors"                : "^2.8.12",
+    "@types/express"             : "^4.17.13"
   }
 }
